[package]
name = "js_ast_analyzer"
version = "0.1.0"
authors = ["Cassandra Fridkin <cass@swag.lgbt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.0.1"
failure = "0.1.8"
rand = "0.7.3"
sourcemap = "6.0.1"
swc_atoms = "0.2"
swc_common = { version = "0.10", features = ["concurrent"] }
swc_ecma_ast = "0"
swc_ecma_parser = "0"
swc_ecma_visit = "0"
wasmparser = "0"
wast = "26"
tempfile = "3.1.0"